--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.7",
     "node-sass": "^4.7.2",
     "raw-loader": "^0.5.1",
+    "sass-extract": "^2.1.0",
+    "sass-extract-loader": "^1.1.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "svg-inline-loader": "^0.8.0",
@@ -25,6 +27,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "connect": "^3.6.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
