Router e inicio do redux

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "connect": "^3.6.6",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   }
 }
