--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.7",
+    "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "^4.7.2",
     "raw-loader": "^0.5.1",
     "sass-extract": "^2.1.0",
