--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-react-redux-isomorphic-boilerplate",
   "version": "0.0.1",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
@@ -13,6 +14,8 @@
     "html-webpack-plugin": "^3.0.7",
     "mini-css-extract-plugin": "^0.2.0",
     "node-sass": "^4.7.2",
+    "nodemon": "^1.17.2",
+    "parallelshell": "^3.0.2",
     "raw-loader": "^0.5.1",
     "sass-extract": "^2.1.0",
     "sass-extract-loader": "^1.1.0",
@@ -24,11 +27,16 @@
     "webpack-dev-server": "^3.1.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "dev:client": "webpack-dev-server --mode development",
+    "build:client": "webpack --mode production",
+    "build:server": "babel ./server -d build/server",
+    "build:watch:server": "babel ./server -d build/server --watch",
+    "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
+    "start:dev": "parallelshell 'npm run build:watch:server' 'npm run build:watch:client' 'nodemon ./build/server/index.js'"
   },
   "dependencies": {
     "connect": "^3.6.6",
+    "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
